--- a/index.css
+++ b/index.css
@@ -1,10 +1,21 @@
 body{
 	margin: auto;
 	padding: 0;
+ 
 }
 html {
 	background-color: white;
 	font-family: "hobo-std", sans-serif;
+}
+
+#playqueue {
+	background: blue;
+	height: 100%;
+	top: 62px;
+	right: -100px;
+	width: 100px;
+	position: absolute;
+
 }
 #media-bar {
 	position: relative;
@@ -67,3 +78,34 @@ html {
 #logo:hover{
 	cursor: pointer;
 }
+#media-bar{ height: 62px }
+
+#media-bar-wrapper > div > img {
+	height : 62px;
+}
+
+#artwork{ 
+	height: 62px;
+	width: 62px;
+	left: 15.5px;
+	top: 5;
+}
+
+#play-pause{ 
+	left: 93px;
+}
+
+#song-queue{ 
+	right: 0;
+}
+
+#video-queue{
+	right: 124px;
+}
+#reading-list{
+	right: 228px;
+}
+#volume{ 
+	right: 362px;
+}
+
